--- a/Project.toml
+++ b/Project.toml
@@ -13,8 +13,8 @@ VegaLite = "112f6efa-9a02-5b7d-90c0-432ed331239a"
 
 [compat]
 CSVFiles = "0.16.0"
-DataFrames = "0.19.1"
-Distributions = "0.20, 0.21"
+DataFrames = "0.19.1, 0.22, 1.0"
+Distributions = "0.20, 0.21, 0.22, 0.23, 0.24, 0.25"
 Mimi = "0.9.3"
 Query = "0.12"
 julia = "1"
